# Referent-agent-architecture

./: .gitignore  README.md  pyproject.toml
src/agent_reference_arch/: __init__.py  cli.py  gradio_app.py
src/agent_reference_arch/agents/: __init__.py
src/agent_reference_arch/agents/planner/: README.md  __init__.py  agent.py  prompts.py  tools.py
src/agent_reference_arch/agents/planner_foundry/: README.md  __init__.py  agent.py  prompts.py  tools.py
src/agent_reference_arch/agents/planner_lmstudio/: README.md  __init__.py  agent.py  prompts.py  tools.py
tests/: test_gradio_app.py  test_smoke.py
tests/agents/planner/: test_agent.py  test_prompts.py  test_tools.py
tests/agents/planner_foundry/: test_agent.py  test_prompts.py  test_tools.py
tests/agents/planner_lmstudio/: test_agent.py  test_prompts.py  test_tools.py
